--- a/react-tailwind/src/output.css
+++ b/react-tailwind/src/output.css
@@ -55,24 +55,13 @@
     --color-blue-800: oklch(42.4% 0.199 265.638);
     --color-blue-900: oklch(37.9% 0.146 265.522);
     --color-blue-950: oklch(28.2% 0.091 267.935);
-    --color-pink-100: oklch(94.8% 0.028 342.258);
     --color-pink-200: oklch(89.9% 0.061 343.231);
     --color-pink-300: oklch(82.3% 0.12 346.018);
     --color-pink-400: oklch(71.8% 0.202 349.761);
-    --color-pink-500: oklch(65.6% 0.241 354.308);
-    --color-gray-100: oklch(96.7% 0.003 264.542);
-    --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-300: oklch(87.2% 0.01 258.338);
-    --color-gray-400: oklch(70.7% 0.022 261.325);
-    --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-zinc-800: oklch(27.4% 0.006 286.033);
-    --color-stone-50: oklch(98.5% 0.001 106.423);
     --color-stone-200: oklch(92.3% 0.003 48.717);
     --color-stone-400: oklch(70.9% 0.01 56.259);
     --color-stone-500: oklch(55.3% 0.013 58.071);
-    --color-stone-600: oklch(44.4% 0.011 73.639);
-    --color-stone-700: oklch(37.4% 0.01 67.558);
-    --color-stone-900: oklch(21.6% 0.006 56.043);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -84,13 +73,6 @@
     --container-5xl: 64rem;
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
-    --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
-    --text-4xl: 2.25rem;
-    --text-4xl--line-height: calc(2.5 / 2.25);
-    --radius-lg: 0.5rem;
-    --default-transition-duration: 150ms;
-    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -244,29 +226,11 @@
   }
 }
 @layer utilities {
-  .m-1 {
-    margin: calc(var(--spacing) * 1);
-  }
-  .m-6 {
-    margin: calc(var(--spacing) * 6);
-  }
   .m-10 {
     margin: calc(var(--spacing) * 10);
   }
-  .m-\[1px\] {
-    margin: 1px;
-  }
-  .mx-1 {
-    margin-inline: calc(var(--spacing) * 1);
-  }
   .mx-10 {
     margin-inline: calc(var(--spacing) * 10);
-  }
-  .my-1 {
-    margin-block: calc(var(--spacing) * 1);
-  }
-  .my-6 {
-    margin-block: calc(var(--spacing) * 6);
   }
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
@@ -280,18 +244,6 @@
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
   }
-  .mb-\[1px\] {
-    margin-bottom: 1px;
-  }
-  .mb-\[10\] {
-    margin-bottom: 10;
-  }
-  .mb-\[10p\] {
-    margin-bottom: 10p;
-  }
-  .mb-\[10px\] {
-    margin-bottom: 10px;
-  }
   .block {
     display: block;
   }
@@ -301,17 +253,74 @@
   .table {
     display: table;
   }
-  .h-0 {
-    height: calc(var(--spacing) * 0);
-  }
   .h-1 {
     height: calc(var(--spacing) * 1);
+  }
+  .h-1\/1 {
+    height: calc(1/1 * 100%);
+  }
+  .h-1\/2 {
+    height: calc(1/2 * 100%);
+  }
+  .h-1\/3 {
+    height: calc(1/3 * 100%);
+  }
+  .h-1\/4 {
+    height: calc(1/4 * 100%);
+  }
+  .h-1\/6 {
+    height: calc(1/6 * 100%);
+  }
+  .h-1\/8 {
+    height: calc(1/8 * 100%);
+  }
+  .h-1\/10 {
+    height: calc(1/10 * 100%);
+  }
+  .h-1\/11 {
+    height: calc(1/11 * 100%);
+  }
+  .h-1\/12 {
+    height: calc(1/12 * 100%);
+  }
+  .h-1\/16 {
+    height: calc(1/16 * 100%);
   }
   .h-2 {
     height: calc(var(--spacing) * 2);
   }
+  .h-2\/1 {
+    height: calc(2/1 * 100%);
+  }
+  .h-2\/2 {
+    height: calc(2/2 * 100%);
+  }
+  .h-2\/3 {
+    height: calc(2/3 * 100%);
+  }
+  .h-2\/4 {
+    height: calc(2/4 * 100%);
+  }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
+  .h-3\/4 {
+    height: calc(3/4 * 100%);
+  }
+  .h-3\/6 {
+    height: calc(3/6 * 100%);
+  }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
+  }
+  .h-4\/6 {
+    height: calc(4/6 * 100%);
+  }
   .h-5 {
     height: calc(var(--spacing) * 5);
+  }
+  .h-5\/6 {
+    height: calc(5/6 * 100%);
   }
   .h-10 {
     height: calc(var(--spacing) * 10);
@@ -319,20 +328,11 @@
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
-  .h-30 {
-    height: calc(var(--spacing) * 30);
-  }
-  .h-50 {
-    height: calc(var(--spacing) * 50);
-  }
-  .h-51 {
-    height: calc(var(--spacing) * 51);
-  }
   .h-100 {
     height: calc(var(--spacing) * 100);
   }
-  .h-300 {
-    height: calc(var(--spacing) * 300);
+  .h-auto {
+    height: auto;
   }
   .h-full {
     height: 100%;
@@ -340,35 +340,11 @@
   .h-screen {
     height: 100vh;
   }
-  .max-h-0 {
-    max-height: calc(var(--spacing) * 0);
-  }
-  .max-h-1 {
-    max-height: calc(var(--spacing) * 1);
-  }
-  .max-h-5 {
-    max-height: calc(var(--spacing) * 5);
-  }
   .max-h-10 {
     max-height: calc(var(--spacing) * 10);
   }
-  .max-h-50 {
-    max-height: calc(var(--spacing) * 50);
-  }
-  .min-h-0 {
-    min-height: calc(var(--spacing) * 0);
-  }
   .min-h-10 {
     min-height: calc(var(--spacing) * 10);
-  }
-  .min-h-20 {
-    min-height: calc(var(--spacing) * 20);
-  }
-  .min-h-50 {
-    min-height: calc(var(--spacing) * 50);
-  }
-  .w-0 {
-    width: calc(var(--spacing) * 0);
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
@@ -388,9 +364,6 @@
   .w-1\/6 {
     width: calc(1/6 * 100%);
   }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
   .w-2xl {
     width: var(--container-2xl);
   }
@@ -403,38 +376,8 @@
   .w-5xl {
     width: var(--container-5xl);
   }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
-  }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
-  }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
-  }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
-  }
-  .w-200 {
-    width: calc(var(--spacing) * 200);
-  }
   .w-300 {
     width: calc(var(--spacing) * 300);
-  }
-  .w-500 {
-    width: calc(var(--spacing) * 500);
-  }
-  .w-\[10\] {
-    width: 10;
-  }
-  .w-\[10p\] {
-    width: 10p;
-  }
-  .w-\[10ps\] {
-    width: 10ps;
-  }
-  .w-\[10px\] {
-    width: 10px;
   }
   .w-\[100px\] {
     width: 100px;
@@ -445,14 +388,8 @@
   .w-full {
     width: 100%;
   }
-  .w-xl {
-    width: var(--container-xl);
-  }
   .w-xs {
     width: var(--container-xs);
-  }
-  .max-w-2xl {
-    max-width: var(--container-2xl);
   }
   .max-w-50 {
     max-width: calc(var(--spacing) * 50);
@@ -460,14 +397,8 @@
   .max-w-xl {
     max-width: var(--container-xl);
   }
-  .min-w-5 {
-    min-width: calc(var(--spacing) * 5);
-  }
   .min-w-50 {
     min-width: calc(var(--spacing) * 50);
-  }
-  .min-w-xl {
-    min-width: var(--container-xl);
   }
   .border-collapse {
     border-collapse: collapse;
@@ -549,9 +480,6 @@
   .bg-green-700 {
     background-color: var(--color-green-700);
   }
-  .bg-pink-100 {
-    background-color: var(--color-pink-100);
-  }
   .bg-pink-200 {
     background-color: var(--color-pink-200);
   }
@@ -560,9 +488,6 @@
   }
   .bg-pink-400 {
     background-color: var(--color-pink-400);
-  }
-  .bg-pink-500 {
-    background-color: var(--color-pink-500);
   }
   .bg-red-50 {
     background-color: var(--color-red-50);
@@ -597,23 +522,11 @@
   .bg-red-950 {
     background-color: var(--color-red-950);
   }
-  .bg-stone-50 {
-    background-color: var(--color-stone-50);
-  }
   .bg-stone-200 {
     background-color: var(--color-stone-200);
   }
   .bg-stone-500 {
     background-color: var(--color-stone-500);
-  }
-  .bg-stone-600 {
-    background-color: var(--color-stone-600);
-  }
-  .bg-stone-700 {
-    background-color: var(--color-stone-700);
-  }
-  .bg-stone-900 {
-    background-color: var(--color-stone-900);
   }
   .bg-yellow-200 {
     background-color: var(--color-yellow-200);
@@ -639,32 +552,11 @@
   .bg-yellow-900 {
     background-color: var(--color-yellow-900);
   }
-  .p-1 {
-    padding: calc(var(--spacing) * 1);
-  }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
-  }
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
   .p-6 {
     padding: calc(var(--spacing) * 6);
-  }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
-  .p-24 {
-    padding: calc(var(--spacing) * 24);
-  }
-  .p-100 {
-    padding: calc(var(--spacing) * 100);
-  }
-  .p-\[10px\] {
-    padding: 10px;
-  }
-  .p-px {
-    padding: 1px;
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
@@ -681,39 +573,9 @@
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
-  .pt-\[1\] {
-    padding-top: 1;
-  }
-  .pt-\[1p\] {
-    padding-top: 1p;
-  }
-  .pt-\[1px\] {
-    padding-top: 1px;
-  }
-  .pt-\[1x\] {
-    padding-top: 1x;
-  }
-  .pt-\[10\] {
-    padding-top: 10;
-  }
-  .pt-\[10px\] {
-    padding-top: 10px;
-  }
-  .pt-\[10x\] {
-    padding-top: 10x;
-  }
-  .pt-\[px\] {
-    padding-top: px;
-  }
-  .pt-\[x\] {
-    padding-top: x;
-  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
-  .text-amber-100 {
-    color: var(--color-amber-100);
   }
   .text-blue-50 {
     color: var(--color-blue-50);
