--- a/react-tailwind/src/output.css
+++ b/react-tailwind/src/output.css
@@ -60,6 +60,7 @@
     --color-pink-400: oklch(71.8% 0.202 349.761);
     --color-zinc-800: oklch(27.4% 0.006 286.033);
     --color-stone-200: oklch(92.3% 0.003 48.717);
+    --color-stone-300: oklch(86.9% 0.005 56.366);
     --color-stone-400: oklch(70.9% 0.01 56.259);
     --color-stone-500: oklch(55.3% 0.013 58.071);
     --color-black: #000;
@@ -331,8 +332,17 @@
   .h-100 {
     height: calc(var(--spacing) * 100);
   }
+  .h-\[100px\] {
+    height: 100px;
+  }
   .h-auto {
     height: auto;
+  }
+  .h-dvh {
+    height: 100dvh;
+  }
+  .h-dvw {
+    height: 100dvw;
   }
   .h-full {
     height: 100%;
@@ -384,6 +394,9 @@
   }
   .w-auto {
     width: auto;
+  }
+  .w-dvw {
+    width: 100dvw;
   }
   .w-full {
     width: 100%;
@@ -525,6 +538,9 @@
   .bg-stone-200 {
     background-color: var(--color-stone-200);
   }
+  .bg-stone-300 {
+    background-color: var(--color-stone-300);
+  }
   .bg-stone-500 {
     background-color: var(--color-stone-500);
   }
@@ -576,6 +592,12 @@
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .text-balance {
+    text-wrap: balance;
+  }
+  .text-wrap {
+    text-wrap: wrap;
   }
   .text-blue-50 {
     color: var(--color-blue-50);
@@ -661,6 +683,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-stone-400);
+      }
+    }
+  }
+  .hover\:bg-stone-500 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-stone-500);
       }
     }
   }
